--- a/BasicMTL_projects/BasicMtl2Java/build.properties.samples/2.1.2.build.properties
+++ b/BasicMTL_projects/BasicMtl2Java/build.properties.samples/2.1.2.build.properties
@@ -1,10 +1,10 @@
-# $Id: 2.1.2.build.properties,v 1.1 2004-03-15 14:26:30 dvojtise Exp $
+# $Id: 2.1.2.build.properties,v 1.2 2004-06-04 10:08:19 dpollet Exp $
 # This is the build.properties file to be run with eclipse 2.1.2 (core 2.1.2 and emf 1.1.1)
 # it allows to adapt to the user configuration
 # please look at http://www.eclipse.org/emf/ for eclipse-emf versions matching
 
 # location of eclipse plugin directory :
-eclipse.plugins = ../../../eclipse/plugins
+eclipse.plugins = ${eclipse.home}/plugins
 
 # needeed plugins : be careful to your version !
 org.eclipse.core.runtime.jar = ${eclipse.plugins}/org.eclipse.core.runtime_2.1.2/runtime.jar
