--- a/BasicMTL_projects/BasicMtl2Java/build.properties.samples/ECLIPSE3M8VERSION/M8_200403261517build.properties
+++ b/BasicMTL_projects/BasicMtl2Java/build.properties.samples/ECLIPSE3M8VERSION/M8_200403261517build.properties
@@ -1,10 +1,10 @@
-# $Id: M8_200403261517build.properties,v 1.1 2004-04-28 12:27:23 jpthibau Exp $
+# $Id: M8_200403261517build.properties,v 1.2 2004-06-04 10:08:20 dpollet Exp $
 # This is the build.properties file to be run with eclipse 3.0.0 (core 3.0.0 and emf 2.0)
 # it allows to adapt to the user configuration
 # please look at http://www.eclipse.org/emf/ for eclipse-emf versions matching
 
 # location of eclipse plugin directory :
-eclipse.plugins = ../../plugins
+eclipse.plugins = ${eclipse.home}/plugins
 
 # needeed plugins : be careful to your version !
 org.eclipse.core.runtime.jar = ${eclipse.plugins}/org.eclipse.core.runtime_3.0.0/runtime.jar
