Eclipse versions management
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@590 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl2Java/VersionManagement/EclipseV2/V2SpecificFiles/BasicMtl2Java/build.properties.samples/2.1.2.build.properties
+++ b/BasicMTL_projects/BasicMtl2Java/VersionManagement/EclipseV2/V2SpecificFiles/BasicMtl2Java/build.properties.samples/2.1.2.build.properties
@@ -1,10 +1,10 @@
-# $Id: 2.1.2.build.properties,v 1.2 2004-06-04 10:08:19 dpollet Exp $
+# $Id: 2.1.2.build.properties,v 1.1 2004-06-04 12:02:11 jpthibau Exp $
 # This is the build.properties file to be run with eclipse 2.1.2 (core 2.1.2 and emf 1.1.1)
 # it allows to adapt to the user configuration
 # please look at http://www.eclipse.org/emf/ for eclipse-emf versions matching
 
 # location of eclipse plugin directory :
-eclipse.plugins = ${eclipse.home}/plugins
+eclipse.plugins = ../../../eclipse/plugins
 
 # needeed plugins : be careful to your version !
 org.eclipse.core.runtime.jar = ${eclipse.plugins}/org.eclipse.core.runtime_2.1.2/runtime.jar
