--- a/BasicMTL_projects/BasicMtl2Java/VersionManagement/EclipseV2/V2SpecificFiles/BasicMtl2Java/build.properties.samples/3.0.0.build.properties
+++ b/BasicMTL_projects/BasicMtl2Java/VersionManagement/EclipseV2/V2SpecificFiles/BasicMtl2Java/build.properties.samples/3.0.0.build.properties
@@ -1,10 +1,10 @@
-# $Id: 3.0.0.build.properties,v 1.2 2004-06-04 10:08:19 dpollet Exp $
+# $Id: 3.0.0.build.properties,v 1.1 2004-06-04 12:02:10 jpthibau Exp $
 # This is the build.properties file to be run with eclipse 3.0.0 (core 3.0.0 and emf 2.0)
 # it allows to adapt to the user configuration
 # please look at http://www.eclipse.org/emf/ for eclipse-emf versions matching
 
 # location of eclipse plugin directory :
-eclipse.plugins = ${eclipse.home}/plugins
+eclipse.plugins = ../../../Eclipse V3/V3/plugins
 
 # needeed plugins : be careful to your version !
 org.eclipse.core.runtime.jar = ${eclipse.plugins}/org.eclipse.core.runtime_3.0.0/runtime.jar
