--- a/BasicMTL_projects/BasicMtlJavaCodeGenerator/build.xml
+++ b/BasicMTL_projects/BasicMtlJavaCodeGenerator/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2003-09-05 12:15:19 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.4 2004-06-04 13:24:10 jpthibau Exp $ -->
 <project name="BasicMtlJavaCodeGenerator" default="dist" basedir=".">
 	<description>
         Known directories for the code generator
@@ -83,9 +83,6 @@
 			<fileset dir="${Utils}\dist\bin"/>
 		</copy>
 		
-	    <copy file="log4j_configuration.xml"
-	    	todir="${dist}/bin"
-	    	overwrite="true"/>
 		<!-- There is no need of junit-->
 		<delete dir="${dist}/bin/ThirdParty/JUnit"/>
 	</target>
