--- a/BasicMTL_projects/org.inria.mtl.plugin/build.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/build.properties
@@ -1,7 +1,12 @@
-source.MTLPlugin.jar = src/
+source.mtl.jar = src/
 bin.includes = plugin.xml,\
-				ThirdParty/MTL/BasicMTLc.jar, \
-				ThirdParty/log4j/log4j.jar, \
-				ThirdParty/antlr/antlrfull.jar, \
-				ThirdParty/Runtime/BasicMTLruntime.jar, \
-               *.jar
+	       plugin.properties,\
+		icons/,\
+		MTL/,\
+	       MTL/bin/BasicMTLc.jar,\
+	       MTL/bin/ThirdParty/log4j/log4j.jar,\
+	       MTL/bin/ThirdParty/ANTLR/antlrfull.jar,\
+	       MTL/bin/BasicMTLruntime.jar,\	
+               *.jar,\
+		readme.txt
+src.includes = src/
