--- a/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
@@ -27,6 +27,12 @@ MTLcomp=Compilateur
 MTLViewCategory=MTL
 outline=Outline
 Log4J=Log4J 
+menu.clean=Clean
+menu.tooltip.clean=Run the Clean command
+menu.about=About
+menu.tooltip.about=About MTL Plugin
+menu.newProject=Create a new MTL Project
+menu.tooltip.newProject=Create a new MTL Project
 
 ##Wizards  Extension point names ##
 new.category.name=MTL 
@@ -96,20 +102,6 @@ ConvertLineDelimitersActions.label= Co&nvert Line Delimiters
 ConvertLineDelimitersToWindowsAction.label= To &Windows
 ConvertLineDelimitersToUNIXAction.label= To &UNIX
 ConvertLineDelimitersToMacAction.label= To &Mac
-
-##########################################################################
-# Javadoc Support
-##########################################################################
-PHPDocWizard.name= PHPDoc
-PHPDocWizard.description=Generate PHPDoc
-PHPDoc.preferencePageName= PHPDoc
-CreatePHPDocAction.label= Run PHPDoc &Wizard...
-CreatePHPDocAction.tooltip= Run PHPDoc Wizard
-
-##########################################################################
-# PHP Working Set Support
-##########################################################################
-PHPWorkingSetPage.name= PHP
 
 
 ##########################################################################
