--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/MTLImportMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/MTLImportMessages.properties
@@ -448,3 +448,6 @@ CPListLabelProvider.unknown_element.label=unknown element
 NewSourceFolderDialog.useproject.button=&Project as source folder
 NewSourceFolderDialog.usefolder.button=&Folder as source folder
 NewSourceFolderDialog.sourcefolder.label=&Source folder name:
+
+NewFolder.title = New Folder
+NewFolder.text = Folder
