--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/pages/TabMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/pages/TabMessages.properties
@@ -5,3 +5,11 @@ LibrariesPage.libraries.addtllfolder.button = Add TLL Folders...
 LibrariesPage.libraries.edit.button=Edit
 LibrariesPage.libraries.remove.button=Remove
 LibrariesPage.libraries.label= Add tll file or tll folder files
+
+# ------- NewJavaProjectWizardPage------- 
+
+NewMtlProjectWizardPage.title=MTL Settings
+NewMtlProjectWizardPage.description=Define the MTL build settings.
+
+NewMtlProjectWizardPage.op_desc=Creating MTL project...
+
