--- a/BasicMTL_projects/org.inria.mtl.plugin/.classpath
+++ b/BasicMTL_projects/org.inria.mtl.plugin/.classpath
@@ -23,5 +23,6 @@
     <classpathentry kind="lib" path="MTL/bin/BasicMTLruntime.jar"/>
     <classpathentry kind="lib" path="MTL/bin/ThirdParty/ANTLR/antlrfull.jar"/>
     <classpathentry kind="lib" path="MTL/bin/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="var" path="ECLIPSE_CORE_BOOT"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
