--- a/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
@@ -29,7 +29,7 @@ outline=Outline
 Log4J=Log4J 
 menu.clean=Clean
 menu.tooltip.clean=Run the Clean command
-menu.about=About
+menu.about=About MTL Plugin
 menu.tooltip.about=About MTL Plugin
 menu.newProject=Create a new MTL Project
 menu.tooltip.newProject=Create a new MTL Project
