--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/editors/actions/ActionMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/editors/actions/ActionMessages.properties
@@ -257,4 +257,10 @@ ShowJavaDoc.label=Show &Tooltip Description
 ShowJavaDoc.tooltip=Shows Tooltip Description for Element at Cursor
 ShowJavaDoc.description=Shows the tooltip description for the element at the cursor
 
+CompilerAction.label=Compile MTL file
+CompilerAction.tooltip=Compiles the current MTL file
+CompilerAction.image=compile.gif
+CompilerAction.description=Compiles the current MTL file 
+
+
 
