--- a/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/plugin.properties
@@ -45,18 +45,20 @@ new.pluginFile.description=Create a MTL File
 
 ##Markers
 MTLProblem = MTL Generation Problem
-compile.project.action=Build MTL Project
-compile.folder.action=Build MTL Folder
+compile.project.action=Compile MTL Project
+compile.folder.action=Compile MTL Folder
 MTLMenu=MTL
 MTL.menu=MTL
 MTLEditor=MTL Editor
 mtlConsoleView = MTL Console
-build.all.projects = Build all MTL Projects
-tooltip.build.all.projects=Build all MTL Projects in workspace
-build.project=Build Project
-tooltip.build.project=Build selected project
-build.folder=Build folder
-tooltip.build.folder=Build selected source folder
+build.all.projects = Compile all MTL Projects
+tooltip.build.all.projects=Compile all MTL Projects in workspace
+build.project=Compile Project
+tooltip.build.project=Compile selected project
+build.folder=Compile folder
+tooltip.build.folder=Compile selected source folder
+tooltip.run.project=Run project
+run.project=Run project
 
 ##Actions
 ##########################################################################
