--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/MTLImportMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/MTLImportMessages.properties
@@ -451,3 +451,5 @@ NewSourceFolderDialog.sourcefolder.label=&Source folder name:
 
 NewFolder.title = New Folder
 NewFolder.text = Folder
+
+BuildPathsBlock.tab.mainClass=Main class Folder
