--- a/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/pages/TabMessages.properties
+++ b/BasicMTL_projects/org.inria.mtl.plugin/src/org/inria/mtl/plugin/wizards/pages/TabMessages.properties
@@ -6,6 +6,8 @@ LibrariesPage.libraries.edit.button=Edit
 LibrariesPage.libraries.remove.button=Remove
 LibrariesPage.libraries.label= Add tll file or tll folder files
 
+MainClassPage.label= Main class folder
+
 # ------- NewJavaProjectWizardPage------- 
 
 NewMtlProjectWizardPage.title=MTL Settings
