Using factories for clearer (and more flexible) code
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@622 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/samples_projects/GenericModelToolbox/src/Containment/build.xml
+++ b/samples_projects/GenericModelToolbox/src/Containment/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2004-06-22 17:04:53 edrezen Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-06-24 16:54:09 edrezen Exp $ -->
 
 <project name="Containment" default="run Containment test" basedir=".">
 	<description>
@@ -12,6 +12,7 @@
 		<ant antfile="Containment4MOF_build.xml"     dir="." target="clean"/>
 		<ant antfile="Containment4UML_build.xml"     dir="." target="clean"/>
 		<ant antfile="Containment4SimpleRDBMS_build.xml"    dir="." target="clean"/>
+		<ant antfile="ContainmentFactory_build.xml"    dir="." target="clean"/>
 		<ant antfile="ContainmentTests_build.xml"    dir="." target="clean"/>
 	</target>
 
@@ -23,6 +24,7 @@
 		<ant antfile="Containment4MOF_build.xml"     dir="." target="compile"/>
 		<ant antfile="Containment4UML_build.xml"     dir="." target="compile"/>
 		<ant antfile="Containment4SimpleRDBMS_build.xml"    dir="." target="compile"/>
+		<ant antfile="ContainmentFactory_build.xml"    dir="." target="compile"/>
 		<ant antfile="ContainmentTests_build.xml"    dir="." target="compile"/>
 	</target>
 	
