--- a/BasicMTL_projects/BMTLDefaultVisitors/DefaultObservers/build.xml
+++ b/BasicMTL_projects/BMTLDefaultVisitors/DefaultObservers/build.xml
@@ -1,5 +1,5 @@
-<!-- $Id: build.xml,v 1.1 2003-12-16 07:35:44 jpthibau Exp $ -->
-<project name="BasicMtl_Transformation_libraires" default="compile DefaultVisitors" basedir=".">
+<!-- $Id: build.xml,v 1.1 2004-06-30 14:40:22 jpthibau Exp $ -->
+<project name="BasicMtl_Transformation_libraires" default="compile DefaultObservers" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
 	</description>
@@ -33,8 +33,8 @@
 	    <mkdir dir="${bin}"/>
 	</target>
 	
-	<target name="compile DefaultVisitors" depends="init"
-  	 	description="Generate code for DefaultVisitors.mtl">
+	<target name="compile DefaultObservers" depends="init"
+  	 	description="Generate code for DefaultObservers.mtl">
 	 	<java jar="../BasicMtl2Java/PureJava/dist/bin/Facade.jar" 
            fork="true"
            failonerror="true"
@@ -43,15 +43,15 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="DefaultVisitors"/> 
+         <arg value="DefaultObservers"/> 
          <arg value="-BinPath"/> 
-         <arg value="${build}/src/java/DefaultVisitors/"/> 
+         <arg value="${build}/src/java/DefaultObservers/"/> 
        </java>
  
 	</target>
 
 	
-	<target name="compile generated code" depends="compile DefaultVisitors">
+	<target name="compile generated code" depends="compile DefaultObservers">
 		<description>
   			compile the generated Java Code
   		</description>		
@@ -60,17 +60,17 @@
     	    destdir="${bin}">
    			<classpath refid="MTLcompiler.class.path"/>
    		</javac>
-  		<javac srcdir="${build}/src/java/DefaultVisitors" 
+  		<javac srcdir="${build}/src/java/DefaultObservers" 
     	    destdir="${bin}">
    			<classpath refid="MTLcompiler.class.path"/>
    		</javac>		
 	</target>
 	
 	<target name="clean"
-        description="clean up DefaultVisitors lib" >
+        description="clean up DefaultObservers lib" >
     	<!-- Delete the ${build}, {$bin} and ${dist} directory trees -->
-    	<delete dir="${build}/src/java/DefaultVisitors"/>    
-    	<delete dir="${build}/src/UncheckedTLL/DefaultVisitors.tll"/>
-    	<delete dir="${build}/src/TLL/DefaultVisitors.tll"/>    
+    	<delete dir="${build}/src/java/DefaultObservers"/>    
+    	<delete dir="${build}/src/UncheckedTLL/DefaultObservers.tll"/>
+    	<delete dir="${build}/src/TLL/DefaultObservers.tll"/>    
   	</target>
 </project>
