--- a/samples_projects/GenericModelToolbox/src/Containment/build.xml
+++ b/samples_projects/GenericModelToolbox/src/Containment/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2004-06-24 16:54:09 edrezen Exp $ -->
+<!-- $Id: build.xml,v 1.3 2004-07-01 15:41:01 edrezen Exp $ -->
 
 <project name="Containment" default="run Containment test" basedir=".">
 	<description>
@@ -6,32 +6,19 @@
 	</description>
 
 	<target name="clean" description="">
-		<ant antfile="ContainmentView_build.xml"     dir="." target="clean"/>
-		<ant antfile="ContainmentDefaultAdapter_build.xml"     dir="." target="clean"/>
-		<ant antfile="ContainmentCommands_build.xml" dir="." target="clean"/>
-		<ant antfile="Containment4MOF_build.xml"     dir="." target="clean"/>
-		<ant antfile="Containment4UML_build.xml"     dir="." target="clean"/>
-		<ant antfile="Containment4SimpleRDBMS_build.xml"    dir="." target="clean"/>
-		<ant antfile="ContainmentFactory_build.xml"    dir="." target="clean"/>
-		<ant antfile="ContainmentTests_build.xml"    dir="." target="clean"/>
+		<ant antfile="Containment_build.xml"      dir="." target="clean"/>
+		<ant antfile="ContainmentTests_build.xml" dir="." target="clean"/>
 	</target>
 
 
-	<target name="build Containment test" description="" depends="clean">
-		<ant antfile="ContainmentView_build.xml"     dir="." target="compile"/>
-		<ant antfile="ContainmentDefaultAdapter_build.xml"     dir="." target="compile"/>
-		<ant antfile="ContainmentCommands_build.xml" dir="." target="compile"/>
-		<ant antfile="Containment4MOF_build.xml"     dir="." target="compile"/>
-		<ant antfile="Containment4UML_build.xml"     dir="." target="compile"/>
-		<ant antfile="Containment4SimpleRDBMS_build.xml"    dir="." target="compile"/>
-		<ant antfile="ContainmentFactory_build.xml"    dir="." target="compile"/>
-		<ant antfile="ContainmentTests_build.xml"    dir="." target="compile"/>
+	<target name="build Containment test" description="">
+		<ant antfile="Containment_build.xml"       dir="." target="compile"/>
+		<ant antfile="ContainmentTests_build.xml"  dir="." target="compile"/>
 	</target>
+
 	
-	
-	<target name="run Containment test" description="" depends="build Containment test">   		
-  		<ant antfile="ContainmentTests_build.xml" dir="." target="run"> 
-	  	</ant>	  			
+	<target name="run Containment test" description="" >   		
+  		<ant antfile="ContainmentTests_build.xml" dir="." target="run"/> 
   	</target>
   	
 </project>
